# r2_rp2040_rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
apps/: memory.x
apps/shoulder-sensor/: Cargo.toml  README.md  build.rs
apps/shoulder-sensor/src/: can.rs  can_cli_commands.rs  can_consumer.rs  can_tasks.rs  can_updater.rs  cli.rs  cli_commands.rs  cli_task.rs  main.rs  noline_async.rs  tlv493d.rs  usb.rs  util.rs
boot/embassy-bootloader/: Cargo.toml  memory.x
boot/embassy-bootloader/src/: main.rs
crates/canbus/: Cargo.toml
crates/canbus/src/: can.rs  can_cli_commands.rs  can_consumer.rs  can_updater.rs  config.rs  handlers.rs  isotp.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/usb-cli/: Cargo.toml
crates/usb-cli/src/: cpu_handler.rs  handlers.rs  io.rs  lib.rs
crates/usb-serial/: Cargo.toml
crates/usb-serial/src/: lib.rs
