[workspace]
#members = ["boot/*", "boards/*", "crates/*", "apps/*"]
members = ["boot/*", "crates/*", "apps/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[workspace.dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 'z'
strip = true  # Automatically strip symbols from the binary.

[profile.dev]
debug = 2
lto = true
opt-level = "z"