[package]
name = "shoulder-sensor"
version = "0.1.1"
edition = "2021"
authors = ["David Smith <1734595+daveismith@users.noreply.github.com>"]
license = "MIT or Apache-2.0"
build = "build.rs"

[features]
default = ["defmt"]
defmt = []

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[dependencies]
embassy-rp = { version = "0.7.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040"
] }
embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
    # "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt"
] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime"
] }
embassy-futures = { version = "0.1.1" }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.5.0" }
embassy-boot-rp = { version = "0.7.0" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embedded-alloc = "0.6.0"
static_cell = "2.1.1"

canbus = { path = "../../crates/canbus", features = ["usb-cli"] }
usb-cli = { path = "../../crates/usb-cli" }
usb-serial = { path = "../../crates/usb-serial" }

embedded-io-async = "0.6.1"
async-trait = "0.1"

log = { version = "0.4.27", features = ["max_level_info"]}
format_no_std = "1.2.0"
smart-leds = "0.4.0"

#mcp25xx = { version = "0.3.0", features = ["mcp25625"] }
embedded-can = "0.4.1"
embedded-hal-async = "1.0.0"
#embedded-hal-bus = "0.3.0"
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
heapless = "0.8.0"
embedded-storage-async = "0.4.1"

sequential-storage = "5.0.0"
bitflags = "2.9.1"
libm = "0.2.11"
no-std-moving-average = "0.3.0"

#slice-copy = "0.3.0"
#num_enum = { version = "0.7.4", default-features = false, features = [] }
