[package]
name = "canbus"
version = "0.1.1"
edition = "2021"
authors = ["David Smith <1734595+daveismith@users.noreply.github.com>"]
license = "MIT or Apache-2.0"

[dependencies]
async-trait = "0.1"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
embassy-boot-rp = { version = "0.7.0" }
embassy-embedded-hal = "0.4.0"
embassy-executor = "0.8.0"
embassy-futures = "0.1.1"
embassy-rp = "0.7.0"
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime"
] }
embedded-can = "0.4.1"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-io-async = "0.6.1"
heapless = "0.8.0"
log = { version = "0.4.27", features = ["max_level_info"]}
mcp25xx = { version = "0.3.0", features = ["mcp25625"] }
num_enum = { version = "0.7.4", default-features = false, features = [] }
sequential-storage = "5.0.0"
slice-copy = "0.3.0"
static_cell = "2.1.1"

usb-cli = { path = "../../crates/usb-cli" }