[package]
name = "canbus"
version = "0.1.1"
edition = "2021"
authors = ["David Smith <1734595+daveismith@users.noreply.github.com>"]
license = "MIT or Apache-2.0"

[features]
default = ["usb-cli"]
usb-cli = ["dep:usb-cli", "dep:config"]
mcp25625 = ["mcp25xx/mcp25625"]
mcp2515 = ["mcp25xx/mcp2515"]

[dependencies]
async-trait = "0.1"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
embassy-boot-rp = { version = "0.8.0" }
embassy-embedded-hal = "0.5.0"
embassy-executor = "0.9.1"
embassy-futures = "0.1.1"
embassy-rp = "0.8.0"
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime"
] }
embedded-can = "0.4.1"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-io-async = "0.6.1"
heapless = "0.8.0"
log = { version = "0.4.27", features = ["max_level_info"]}
mcp25xx = { version = "0.4.0" }
num_enum = { version = "0.7.4", default-features = false, features = [] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
sequential-storage = "5.0.0"
slice-copy = "0.3.0"
static_cell = "2.1.1"

config = { path = "../../crates/config", optional = true }
usb-cli = { path = "../../crates/usb-cli", optional = true }