[package]
name = "usb-serial"
version = "0.1.0"
edition = "2021"
authors = ["David Smith <1734595+daveismith@users.noreply.github.com>"]
license = "MIT or Apache-2.0"

[dependencies]
embassy-executor = "0.8.0"
embassy-futures = { version = "0.1.1" }
embassy-rp = { version = "0.7.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040"
] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.5.0" }
embedded-io-async = "0.6.1"
log = { version = "0.4.27", features = ["max_level_info"]}
